# psucontrol

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.gitea/workflows/: buildandpublish.yaml  createrelease.yaml
.github/workflows/: buildandpublish.yaml  createrelease.yaml
extra/: psucontrol_128.icns
src/psucontrol/: __main__.py  aboutDialog.ui  errorDialog.ui  gui.py  gui.qrc  limitDialog.ui  mainWindow.ui  preferencesDialog.ui  protocol.py  rc_gui.py  ui_aboutDialog.py  ui_errorDialog.py  ui_limitDialog.py  ui_mainWindow.py  ui_preferencesDialog.py
